# configparser

./: .hgtags  .travis.yml  CHANGES.rst  MANIFEST.in  NEWS.rst  README.rst  azure-pipelines.yml  configparser.py  configparser_helpers.py  conftest.py  convert.py  convert.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py  sync-upstream  sync-upstream.py  test_cfgparser.py  test_configparser.py  test_helpers.py  tox.ini  usercustomize.py
.github/: FUNDING.yml
.github/workflows/: main.yml
backports/configparser/: __init__.py  helpers.py
backports/configparser/compat/: py39.py
configparser/: __init__.py
docs/: conf.py  index.rst
newsfragments/: +0c2d4cf5.bugfix.rst  +221568a4.removal.rst  +8a3b11d7.removal.rst  +eca10a5c.removal.rst  +f01a480d.feature.rst  70.bugfix.rst
src/: compat.py  test_backport.py  test_configparser.py  test_helpers.py
src/backports/configparser/: __init__.py  compat.py  helpers.py
tests/: compat.py  test_backport.py  test_configparser.py
