# coding: utf-8

[metadata]
name=configparser
author=Åukasz Langa
author_email=lukasz@langa.pl
maintainer=Jason R. Coombs
maintainer_email=jaraco@jaraco.com
description=Updated configparser from Python 3.8 for Python 2.6+.
long_description=file:README.rst
url=https://github.com/jaraco/configparser/
keywords=configparser ini parsing conf cfg configuration file
platforms=any
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
package_dir =
	=src
py_modules = configparser
include_package_data = true
python_requires = >=3.7
install_requires =

[options.packages.find]
where = src
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8
	# workaround for tholo/pytest-flake8#87
	flake8 < 5
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.3

	# local
	types-backports

docs =
	# upstream
	sphinx
	jaraco.packaging >= 9
	rst.linker >= 1.9
	jaraco.tidelift >= 1.4

	# local

[options.entry_points]
