# coding: utf-8

[metadata]
name = configparser
author = Åukasz Langa
author_email = lukasz@langa.pl
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
description = Updated configparser from stdlib for earlier Pythons.
long_description = file:README.rst
url = https://github.com/jaraco/configparser/
keywords = configparser ini parsing conf cfg configuration file
platforms = any
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >=3.8
install_requires =

[options.extras_require]
testing =
	# upstream
	pytest >= 6, != 8.1.1
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	types-backports

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# tidelift
	jaraco.tidelift >= 1.4

	# local

[options.entry_points]
